--- a/public/index.html
+++ b/public/index.html
@@ -4,42 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./img/favicon/1.jpg" sizes="16x16">
     <title>Document</title>
     <link rel="stylesheet" href="./output.css" type="text/css">
+    <script src="./main.js" type="text/javascript" async></script>r
 </head>
 <body>
     <div id="root">
-        <div class="content-wrapper max-w-screen-2xl text-base mx-auto px-8 bg-slate-200">
-            <header class="py-6 mx-10">
-                <nav class="flex flex-row justify-between items-center">
+        <div class="font-Karla content-wrapper max-w-screen-2xl text-base mx-auto px-8 bg-slate-200">
+            <header class="p-6 mx-auto">
+                <nav class="relative flex flex-row justify-between items-center">
                     <div class="logo basis-2/6 text-center text-xl font-semibold cursor-pointer">
                         CoffeStyle.
                     </div>
-                    <ul class="basis-3/6 flex items-center justify-end gap-8 uppercase text-sm text-gray-500 font-medium">
-                        <li class="ct-top-menu-iteam">
+                    <ul id="ct-top-menu" class="hidden basis-3/6 lg:flex lg:items-center lg:justify-end lg:gap-8 uppercase text-sm text-gray-500 font-medium">
+                        <li class="ct-top-menu-item">
                             <a href="" class="">Home</a>
                         </li>
-                        <li class="ct-top-menu-iteam">
+                        <li class="ct-top-menu-item">
                             <a href="" class="">Products</a>
                         </li>
-                        <li class="ct-top-menu-iteam">
+                        <li class="ct-top-menu-item">
                             <a href="" class="">Blog</a>
                         </li>
-                        <li class="ct-top-menu-iteam">
+                        <li class="ct-top-menu-item">
                             <a href="" class="">About</a>
                         </li>
-                        <li class="ct-top-menu-iteam">
+                        <li class="ct-top-menu-item">
                             <a href="" class="">Contact</a>
                         </li>
-                        <li class="ct-top-menu-iteam">
+                        <li class="ct-top-menu-item">
                             <a href="" class="">StyleGuide</a>
                         </li>
-                        <li class="ct-top-menu-iteam">
+                        <li class="ct-top-menu-item-active ct-top-menu-item">
                             <a href="" class="" target="blank">Sinh Vien IT</a>
                         </li>
                     </ul>
-                    <ul class="basis-1/6 flex justify-start items-center ml-16 uppercase text-sm text-gray-500 font-medium">
-                        <li class="ct-top-menu-iteam">
+
+                    <ul class="lg:basis-1/6 justify-end basis-3/6 flex lg:justify-start items-center ml-16 uppercase text-sm text-gray-500 font-medium">
+                        <li class="ct-top-menu-item">
                             <a class="flex items-center" href="">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="ct-icon">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
@@ -49,6 +52,12 @@
                             </a>
                         </li>
                     </ul>
+
+                    <div class="basis-1/6 lg:hidden flex items-center cursor-pointer px-3 sm:px-8">
+                        <svg id="ct-toggle-top-menu-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="ct-icon">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                          </svg>                          
+                    </div>
                 </nav>
             </header>
             
